<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/home_layout"
                android:paddingTop="@dimen/home_vertical_margin"
                android:paddingBottom="@dimen/home_vertical_margin"
                android:paddingLeft="@dimen/home_horizontal_margin"
                android:paddingRight="@dimen/home_horizontal_margin"
                android:background="@color/loginPrimaryDark"
                tools:context="me.clonalejandro.clonaauth.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <!-- LOGO -->
        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/fingerprint"
            tools:ignore="ContentDescription"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/titleLogin"
            android:id="@+id/mainTitle"
            android:layout_margin="5dp"
            android:text="@string/title"/>

        <EditText
            android:id="@+id/email_field"
            style="@style/editTextLogin"
            android:hint="@string/login_user"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/pwd_field"
            android:hint="@string/login_pwd"
            style="@style/editTextLogin"
            android:inputType="textPassword"
            tools:ignore="LabelFor"/>

        <!-- SUBMIT -->
        <Button
            android:id="@+id/button"
            style="@style/buttonLogin"
            android:text="@string/login_button"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/helper"
            android:layout_height="wrap_content"
            style="@style/textviewLogin"
            android:text="@string/login_helper"/>


    </LinearLayout>
</RelativeLayout>